Fix Footer Links on smaller devices

--- a/theme/simple/templates/sass/site/_site.scss
+++ b/theme/simple/templates/sass/site/_site.scss
@@ -27,3 +27,9 @@ footer .demo-card-square.mdl-card.mdl-shadow--2dp {
         margin-top: 1em;
     }
 }
+
+@media screen and (min-width: 0) and (max-width: 360px) {
+    .mdl-mini-footer .mdl-mini-footer__link-list {
+        display: table;
+    }
+}
