--- a/theme/simple/templates/sass/style.scss
+++ b/theme/simple/templates/sass/style.scss
@@ -54,17 +54,6 @@ html, body {
 	overflow-y: hidden !important;
 }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0,0,0,0);
-  border: 0;
-}
-
 /*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
